Fix: z-index craziness in box

--- a/src/components/ui/box.scss
+++ b/src/components/ui/box.scss
@@ -1,6 +1,4 @@
 .box {
-	--z-box: 2;
-	--z-bg: 1;
 	position: relative;
 	z-index: 3;
 	display: none;
@@ -12,7 +10,7 @@
 
 .box__positioner {
 	position: fixed;
-	z-index: var(--z-box);
+	z-index: 2;
 	top: 3.5rem;
 	left: 1rem;
 	right: 1rem;
@@ -29,6 +27,7 @@
 
 .box__frame {
 	position: absolute;
+	z-index: 2;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -85,7 +84,7 @@
 
 .box__bg {
 	position: fixed;
-	z-index: var(--z-bg);
+	z-index: 1;
 	top: 0;
 	bottom: 0;
 	left: 0;
